Just left with delete

--- a/User.html
+++ b/User.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Users Page
+            User's Page
         </title>
     </head>
     <body>
@@ -9,6 +9,7 @@
             <h1>
                 Successfully Logged In
             </h1>
+            <input type="button" onclick="location.href = 'EditProfile.php'" value="Edit Profile">
         <center>
     </body>
 </html>
